2001-05-15  Alex Samuel  <samuel@codesourcery.com>

	* qm/platform.py: Remove contents and split it into...
	* qm/platform_linux.py: ... this new file, and...
	* qm/platform_win32.py: ... this, likewise.
	* qm/track/server.py (execute): Let SignalException through.
	* qm/track/qmtrack.in: Handle SignalException.
	* qm/track/memory_idb.py (MemoryIdb.Close): Call __Write.
	(MemoryIdb.__Write): New method.
	(MemoryIdb.AddIssueClass): Call __Write.
	(MemoryIdb.__InsertIssue): Likewise.
	* qm/test/qmtest.in: Import qm.platform.

2001-05-14  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (make_url_for_request): Remove.
	Use AsUrl instead of make_url_for_request throughout.
	* qm/fields.py: Likewise.
	* qm/test/web/show.py: Likewise.
	* qm/test/web/suite.py: Likewise.
	* qm/test/web/web.py: Likewise.
	* qm/track/web/index.py: Likewise.
	* qm/track/web/show.py: Likewise.
	* qm/track/web/summary.py: Likewise.
	* qm/track/web/web.py: Likewise.
	
2001-05-14  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (WebRequestHandler.__HandlePageCacheRequest): New
	method. 
	(WebRequestHandler.__HandleSessionCacheRequest): Likewise.
	(WebRequestHandler.__HandleRequest): Call them.
	(WebRequest.AsUrl): New method.
	(make_set_control): Adjust for using page cache.
	(make_popup_dialog_script): Rename to...
	(make_popup_dialog): ... this and adjust for using page cache.
	(make_confirmation_dialog_script): Rename to...
	(make_confirmation_dialog): ... this, and remove function_name
	parameter. 
	(Session.make_button_for_popup): Reimplement using page cache.
	Leave old implementation, but disabled.
	(cache_page): New function.
	(get_from_cache): Likewise.
	(_page_cache_path): New variable.
	(_page_cache_name): Likewise.
	(_session_cache_name): Likewise.
	* qm/platform.py: Adjust formatting.
	* qm/fields.py (TextField.FormatValueAsHtml): Escape field values.
	(AttachmentField.FormatValueAsHtml): Use make_button_for_popup.
	* qm/common.py (make_temporary_directory): New function.